# python-distribution-example

./: .gitignore  LICENSE  README.md  envr-default  envr.ps1  poetry.toml  pyproject.toml
.github/workflows/: release.yaml
distribution/: portable.py
distribution/fpm/: __main__.py  after-install.sh  after-remove.sh  myapp.fpm
distribution/linux/: .fpm  __main__.py  after-install.sh  after-remove.sh
distribution/windows/: .gitignore  Package.wxs  __main__.py  myapp.wixproj
jpsapp/: __main__.py  main.py
myapp/: __main__.py  main.py
yourapp/: __init__.py
